[project]
name = "fastzero"
version = "0.1.0"
description = ""
authors = [
    {name = "eijihayash",email = "erickejborges@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)"
]

[tool.poetry]
packages = [{include = "fastzero", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.3"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"


[tool.poetry.group.pytest.dependencies]
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/fast_zero -vv'
post_test = 'coverage html'

[tool.ruff.format]
preview = true
quote-style = 'single'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
